--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
 
     <a href="#top" id="to-top"><i class="bi bi-arrow-up-circle-fill"></i></a>
     <a href="https://namecheap.com" class="namecheap">host your webpage</a>
-    <div id="div-0">
+    <!-- <div id="div-0">
       <div id="div-1">1</div>
       <div id="div-2">2</div>
       <div id="div-3">3</div>
-    </div>
+    </div> -->
 
     <h1>using Git and github</h1>
 
